--- a/style.css
+++ b/style.css
@@ -34,7 +34,15 @@ html, body {
     overflow-x: hidden;
     
 }
-.fas {
+.fat {
     font-size: 6em;
     color: darkorange;
+}
+.fab {
+    font-size: 4em;
+    color: white;
+}
+.fa-envelope {
+    font-size: 4em;
+    color: white;
 }
