--- a/style.css
+++ b/style.css
@@ -29,13 +29,9 @@ body {
     .type3 {
     width: 190em;
     height: 47em;
-    /*height: 500px;*/
-    /*position: absolute;*/
     z-index: -1;
     background: grey;
     border-top: 30px solid rgb(235, 234, 234);
-   /* border-left: 30px solid white;
-    border-right: 30px solid white;*/
     }
   }
 
@@ -46,19 +42,13 @@ body {
   and (min-resolution: 192dpi) { 
       .type3 {
         width: 190em;
-        height: 20em;
-        /*height: 500px;*/
-        /*position: absolute;*/
+        height: 15em;
         z-index: -1;
         background: grey;
         border-top: 30px solid rgb(235, 234, 234);
-       /* border-left: 30px solid white;
-        border-right: 30px solid white;*/
       }
 }
 .circleBase {
-    /*border-top-left-radius: 50%;
-    border-top-right-radius: 50%;*/
     border-top-left-radius: 100%;
     border-top-right-radius: 100%;
    
@@ -81,7 +71,24 @@ html, body {
     font-size: 4em;
     color: white;
 }
+.about-spacer-footer{height:15em;}
 
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+      .about-spacer-footer{height: 8em;}
+}
+
+.about-spacer{height: 3em;}
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+      .about-spacer{height: 6em;}
+}
 
   
   
