--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 .type3 {
     width: 190em;
-    height: 10em;
+    height: 46em;
     /*height: 500px;*/
     /*position: absolute;*/
     z-index: -1;
@@ -25,19 +25,7 @@ body {
    /* border-left: 30px solid white;
     border-right: 30px solid white;*/
 }
-@media only screen and (min-width: 1400px) {
-    .type3 {
-    width: 190em;
-    height: 47em;
-    /*height: 500px;*/
-    /*position: absolute;*/
-    z-index: -1;
-    background: grey;
-    border-top: 30px solid rgb(235, 234, 234);
-   /* border-left: 30px solid white;
-    border-right: 30px solid white;*/
-    }
-  }
+
 
   @media screen 
   and (min-device-width: 1200px) 
@@ -56,6 +44,8 @@ body {
         border-right: 30px solid white;*/
       }
 }
+
+
 .circleBase {
     /*border-top-left-radius: 50%;
     border-top-right-radius: 50%;*/
@@ -82,6 +72,10 @@ html, body {
     color: white;
 }
 
-
+.about-spacer {
+    height: 20em;
+}
   
-  
+.contact-spacer{
+    height: 1em;
+}
